change max_coefficient